name:                analytics
version:             0.1.0.0
synopsis:            Simple analyrtics webservice
description:         Please see README.md
homepage:            http://github.com/flavray/analytics#readme
license:             BSD3
license-file:        LICENSE
author:              Flavien Raynaud
maintainer:          flavien.raynaud@gmail.com
copyright:           2010 Flavien Raynaud
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable analytics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       API
                     , Misc
                     , Website
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , either
                     , hedis
                     , servant
                     , servant-server
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , warp
